prod_snapshot_2015-09-24_1030/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Expiration_Status__c</fullName>
        <formula>IF( AND(Last_Schedule_Bill_Date__c &lt; TODAY(), Last_Schedule_Bill_Date__c  &gt; TODAY() - 30), &quot;PAST&quot;,IF( AND(Last_Schedule_Bill_Date__c &gt;= TODAY(),Last_Schedule_Bill_Date__c &lt; TODAY() + 30),&quot;FUTURE&quot;,&quot;OUT OF RANGE&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Expiration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Location__c</fullName>
        <formula>IMAGE( 

&quot;http://maps.google.com/maps/api/staticmap?center=&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode +&quot;&amp;zoom=13&amp;size=650x250&amp;markers=color:blue|&quot; + BillingStreet + &quot;,&quot; + BillingCity + &quot;,&quot; + BillingState + &quot; &quot; + BillingPostalCode + &quot;&amp;sensor=false&amp;format=png32&amp;key=&quot;, &quot;no map available&quot;, 250, 650)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Dig_Name__c</fullName>
        <formula>Account_Manager__r.FirstName &amp; &quot; &quot; &amp;  Account_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager - Dig Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Manager_Print__c)),Account_Manager_Print__r.Email, Account_Manager__r.Email )</formula>
        <label>Account Manager Print Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_FName__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Manager_Print__c)),Account_Manager_Print__r.FirstName, Account_Manager__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print FName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_LName__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Manager_Print__c)),Account_Manager_Print__r.LastName, Account_Manager__r.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print LName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print_Phone__c</fullName>
        <formula>IF(NOT(ISBLANK(Account_Manager_Print__c)),Account_Manager_Print__r.Phone, Account_Manager__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager Print Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Manager_Print__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager - Print</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Controlled From The Opportunity.  Updates Automatically When Opp Is Updated.</inlineHelpText>
        <label>Account Manager - Dig</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Owner_Role__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <label>Account Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Primary_Focus__c</fullName>
        <description>Refreshes Primary Focus from AMP</description>
        <label>Primary Focus</label>
        <picklist>
            <controllingField>Account_Primary_Industry__c</controllingField>
            <picklistValues>
                <fullName>Accounting Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adoption Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amusement &amp; Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anniversary Ring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aston Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATV Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATV Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Dealership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Service &amp; Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bail Bond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW Motorcycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridesmaid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Loan</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Account_Primary_Industry__c</fullName>
        <description>Refreshes Primary Industry from AMP</description>
        <label>Primary Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing-Apparel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewelry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Politics / Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Real Estate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Religion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Active_Billable_Customer__c</fullName>
        <description>Current Or Next FQ Scheduled Billing Dates on Opps that are closed won and NOT marked as canceled</description>
        <label>Active Billable Customer</label>
        <summaryFilterItems>
            <field>Opportunity.Last_Schedule_Bill_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>8/1/2013</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Paused_Or_Canceled__c</field>
            <operation>notEqual</operation>
            <value>Canceled</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Credit_Score__c</fullName>
        <label>Actual Credit Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Year_Started__c</fullName>
        <label>Actual Year Started</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ad_Size_Code__c</fullName>
        <label>Ad Size Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Size__c</fullName>
        <label>Ad Size</label>
        <picklist>
            <picklistValues>
                <fullName>REGULAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BOLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN-COLUMN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DISPLAY AD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Code__c</fullName>
        <label>Ad Spend Code</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ad_Spend_Range__c</fullName>
        <label>Ad Spend Range</label>
        <picklist>
            <picklistValues>
                <fullName>LESS THAN $5,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$5,000 TO $10,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$10,000 TO $20,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$20,000 TO $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$50,000 TO $100,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>$100,000 TO $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OVER $250,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Affiliated_Sales_Rep__c</fullName>
        <label>Sales Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affl_Sales_Rep__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Affl Sales Rep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affl Accounts</relationshipLabel>
        <relationshipName>Affl_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alt_Direct_Phone__c</fullName>
        <label>Alt/Direct Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Approval_Stage__c</fullName>
        <label>Approval Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Lead Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check Information Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Check Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Information Requested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral Questionnaires Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Best_Time_To_Call__c</fullName>
        <label>Best Time To Call</label>
        <picklist>
            <picklistValues>
                <fullName>Early Morning 6am - 9am</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Morning 9am - 12pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Afternoon 12pm - 2pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mid Afternoon 2pm - 4pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afternoon 4pm - 6pm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evening 6pm - 8pm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget_Range__c</fullName>
        <label>Monthly Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_Credit_Score__c</fullName>
        <label>Business Credit Score</label>
        <picklist>
            <picklistValues>
                <fullName>95 to 100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 to 94</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>85 to 89</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>80 to 84</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>75 to 79</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>70 to 74</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than 70</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PROFESSIONAL INDIVIDUAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INSTITUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNKNOWN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name_1__c</fullName>
        <label>Business Legal Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Legal_Name_2__c</fullName>
        <label>Business Legal Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Objectives_Other__c</fullName>
        <label>Business Objectives Other</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Objectives__c</fullName>
        <label>Business Objectives</label>
        <picklist>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exposure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foot Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Approach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media Following</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Track Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website Traffic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CF_Action__c</fullName>
        <label>CF Action</label>
        <picklist>
            <picklistValues>
                <fullName>Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CF_CheckSend__c</fullName>
        <label>CF CheckSend</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add Or Update</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CF_Client_Status__c</fullName>
        <label>CF Client Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CF_Dashboard_Profile__c</fullName>
        <label>CF Dashboard Profile</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Display_Margin_End_Date__c</fullName>
        <label>CF Display Margin End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Display_Margin_Start_Date__c</fullName>
        <label>CF Display Margin Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Display_Spend_Margin__c</fullName>
        <label>CF Display Spend Margin (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Email_2__c</fullName>
        <label>CF_Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CF_Email_Margin_End_Date__c</fullName>
        <label>CF Email Margin End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Email_Margin_Start_Date__c</fullName>
        <label>CF Email Margin Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Email_Spend_Margin__c</fullName>
        <label>CF Email Spend Margin (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_EndDate__c</fullName>
        <label>CF EndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_Line_Break__c</fullName>
        <label>CF Line Break</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Password_Calc__c</fullName>
        <formula>LPAD(TEXT(MONTH(DATEVALUE(CreatedDate))),2,&quot;0&quot;) &amp; LPAD(TEXT(DAY(DATEVALUE(CreatedDate))),2,&quot;0&quot;) &amp; RIGHT(Id,5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Password</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Password__c</fullName>
        <label>CF Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Reporting_Email__c</fullName>
        <label>CF Reporting Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CF_Reporting_FName__c</fullName>
        <label>CF Reporting FName</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Reporting_LName__c</fullName>
        <label>CF Reporting LName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_Reporting_Requested__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CF Reporting Requested</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CF_SEM_Margin_End_Date__c</fullName>
        <label>CF SEM Margin End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_SEM_Margin_Start_Date__c</fullName>
        <label>CF SEM Margin Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_SEM_Spend_Margin__c</fullName>
        <label>CF SEM Spend Margin (%)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CF_Set__c</fullName>
        <formula>&quot;Sent&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF Set</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_StartDate__c</fullName>
        <label>CF StartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CF_UserEmail__c</fullName>
        <label>CF UserEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CF_UserFirst__c</fullName>
        <label>CF UserFirst</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_UserLast__c</fullName>
        <label>CF UserLast</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_UserName_Calc__c</fullName>
        <formula>SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(
SUBSTITUTE(LEFT(SUBSTITUTE(Name,&quot; &quot;,&quot;&quot; ), 8) &amp; &quot;_&quot; &amp; RIGHT( Id , 5),&quot;.&quot;,&quot;_&quot;),&quot;&apos;&quot;,&quot;_&quot;),&quot;,&quot;,&quot;_&quot;),&quot;&amp;&quot;,&quot;_&quot;),&quot;-&quot;,&quot;_&quot;),&quot;!&quot;,&quot;_&quot;),&quot;/&quot;,&quot;_&quot;),&quot;(&quot;,&quot;_&quot;),&quot;)&quot;,&quot;_&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CF UserName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CF_UserName__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CF UserName</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CF_UserPhone__c</fullName>
        <label>CF UserPhone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Call_Status_Desc__c</fullName>
        <label>Call Status Desc</label>
        <picklist>
            <picklistValues>
                <fullName>ANSWERING MACHINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANSWERING SERVICE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUSY SIGNAL (3 ATTEMPTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CALL NOT COMPLETED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COMPLETE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTACT NAME ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELECTRONIC EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMPLOYEE SIZE ONLY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOREIGN LANGUAGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO ANSWER (3 ATTEMPTS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFERRAL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>REFUSAL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Beauty / Barber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eating and drinking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education &amp; religion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial services / Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Improvement Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Niche Medical Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claiming_Ownership__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claiming Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Count__c</fullName>
        <label>Closed Won Count</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Conductor_Digiful_Status__c</fullName>
        <description>conf call number may not have been prepared for 3 + hour call....how about you just call me since you are all in same place?</description>
        <formula>&quot;&amp;id=&quot; + Id + 
&quot;&amp;ReportId=[DigifullStatus]00OF0000004Bue3?pv0=&quot; + Id + 
&quot;&amp;templateid=a0EF000000FEzHZ&quot; +
&quot;&amp;QVar0id=a0ZF0000003bbsY&quot; +
&quot;&amp;QVar1id=a0ZF0000003bc54?pv0=&quot; + Id + &quot;~pv2={QVar0}&quot; +
&quot;&amp;emailtemplateid=00XF0000001PNGS&quot; +
&quot;&amp;emailtoid={QVar0}&quot; +
&quot;&amp;emailadditionalto={QVar1}&quot; +
&quot;&amp;emailrelatedtoid=&quot; + Id +
&quot;&amp;qmode=3&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conductor Digiful Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conductor_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://conductor.appextremes.com/apps/Conga/PointMerge.aspx?SessionId=&quot; &amp; $Api.Session_ID &amp; &quot;&amp;ServerUrl=&quot; &amp; $Api.Partner_Server_URL_80 &amp; Conductor_Digiful_Status__c , &quot;Conga Conductor URL&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conductor URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Partner_Code_Ref__c</fullName>
        <description>References the Media Partner&apos;s Corp Partner Code.</description>
        <formula>Market_Originator__r.Corp_Partner_Code__c</formula>
        <label>Corp Partner Code Ref</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corp_Partner_Code__c</fullName>
        <description>Codes assigned by Gannett Corporate for General Ledger purposes, however, will be utilized by G/O Digital as a code directly linked to the Partner Markets for various purposes such as API&apos;s, naming convention and consolidation of our current Media Partner list.</description>
        <inlineHelpText>Gannett Corporate codes for General Ledger purposes. Also utilized by G/O Digital for linking to the Partner Markets for API&apos;s, naming convention and consolidation of our current Media Partner list.</inlineHelpText>
        <label>Corp Partner Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_DC_Opps__c</fullName>
        <label>Count DC Opps</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>DealChicken</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.IsWon</field>
            <operation>equals</operation>
            <value>true</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_DFL__c</fullName>
        <label>Count DFL</label>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Digital Fulfillment</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>19</length>
        <maskChar>asterisk</maskChar>
        <maskType>creditCard</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Credit_Check_Rating__c</fullName>
        <label>Credit Check Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>